--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
                         <i class="fas fa-align-left"></i>
                     </div>
                     <h3 class="feature-title">Broad Step Distribution</h3>
-                    <p>RecipeGen includes recipes with 2 to 25 steps, with an average of 6.4 steps and 55.84\% of recipes containing more than 6 steps, supporting the modeling of long-range semantic relationships.</p>
+                    <p>RecipeGen includes recipes with 2 to 25 steps, with an average of 6.4 steps and 55.84% of recipes containing more than 6 steps, supporting the modeling of long-range semantic relationships.</p>
                 </div>
                 
                 <div class="feature-card">
