--- a/index.html
+++ b/index.html
@@ -1198,7 +1198,7 @@
                     <div class="footer-logo">
                         <i class="fas fa-utensils"></i> RecipeGen
                     </div>
-                    <p>A comprehensive benchmark for recipe image and video generation, advancing research in food computing and multimodal AI.</p>
+                    <p>A comprehensive benchmark for recipe image generation, advancing research in food computing and multimodal AI.</p>
                 </div>
                 
                 
